--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,58 +1,4 @@
 /* Several times object/template (Button/)  */
-
-
-// SearchBar button 
-
-
-.searchbar__btn {
-  font-size: 0;
-  width: 20px;
-  height: 20px;
-  top: 22px;
-  left: 845px;
-  z-index: 3;
-  display: inline-block;
-  border: 3px solid var(--hoverColor);
-  border-radius: 50%;
-  position: absolute;
-  background-color: transparent;
-  }
-  
-  .searchbar__btn:after {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    width: 3px;
-    height: 13px;
-    border-radius:30%;
-    background-color: var(--hoverColor);
-    transform: rotate(-35deg);
-    top: 13px;
-    left: 13px;
-  }
-
-@media screen and (max-width: 1279px){
-  
-
-    .searchbar__btn {
-      width: 15px;
-      height: 15px;
-      left: 66vw;
-      margin-left:10px;
-      display: inline-block;
-      border: 2px solid var(--hoverColor);
-  
-    }
-    
-    .searchbar__btn:after {
-      width: 2px;
-      height: 9px;
-      top: 9px;
-      left: 13px;
-    }
-  
-  }
-  
  
 
   // Menu 
@@ -118,7 +64,7 @@ ul {
 }
 
 
-  // Menu Mobile 
+  // Mobile Menu 
 
 @media screen and (max-width: 1279px){
 
